--- a/katerinh-app/src/components/AsideApp/AsideApp.module.css
+++ b/katerinh-app/src/components/AsideApp/AsideApp.module.css
@@ -16,7 +16,7 @@
   padding: 10px 20px;
   border-radius: 8px;
   border: none;
-
+  margin: 10px;
   /* Color and Font */
   background-color: #434445; /* Primary blue */
   color: white;
